# abdomen1

./: .env  .env copy  .env.development  .gitignore  08_Kaggle_RSNA_Pretraining.py  09_Transfer_Learning_Pipeline.py  1.ipynb  2.ipynb  3-Yolo-1.ipynb  3-Yolo-2-Egitim-local.ipynb  3-Yolo-2-Egitim.ipynb  3-Yolo.ipynb  3.ipynb  4-Yolo-Egitim-local.ipynb  4-Yolo-Egitim.ipynb  5-Seg.ipynb  6-RSNA.ipynb  6-RSNA_local.ipynb  7-WeakSeg-Analiz.ipynb  Bilgi.xlsx  Faz1_Analiz.ipynb  Faz1_Veri_Hazirlik_1fold.ipynb  Faz1a_WeakSeg_MedSAM_Test.ipynb  Faz2_Split_Onisleme_1fold copy.ipynb  Faz2_Split_Onisleme_1fold.ipynb  Faz2_nnUNet_Colab_Kaggle.ipynb  Faz2a_nnUNet_Colab_Kaggle.ipynb  Faz2a_nnUNet_Pretrain.ipynb  Faz2b_nnUnet_Kaggle.ipynb  Faz2c_MedNeXt_Kaggle.ipynb  Faz3_YOLO12_Baseline_1fold.ipynb  Faz3_YOLO_Baseline_1fold.ipynb  Faz3_YOLO_Baseline_1fold_kaggle.ipynb  Faz3_YOLO_Colab_Kaggle copy.ipynb  Faz3_YOLO_Colab_Kaggle.ipynb  Faz3_YOLO_Viewer_1fold.ipynb  Faz3_nnUNet_3B_1fold-colab1.ipynb  Faz3_nnUNet_3B_1fold-colab1_preprocess.ipynb  Faz3_nnUNet_Colab_Kaggle copy.ipynb  Faz3_nnUNet_Colab_Kaggle.ipynb  (+59 more)
Analiz_Sonuclari/: .~lock.Veri_Seti_Analiz_Ozeti.xlsx#  Veri_Seti_Analiz_Ozeti.xlsx  Veri_Seti_Analiz_Raporu.md  bb_boyut_grafigi.py  bb_ozet_egitim.csv  bb_ozet_yarisma.csv  comp_dicom_meta.csv  sinif_ornekleri_bb.py  train_dicom_meta.csv  vaka_kesit_istatistikleri.py
abdomen_project/: README.md
kontrol/: 09_Transfer_Learning_Pipeline.py  2.ipynb  3-Yolo-1.ipynb  3-Yolo-2-Egitim-local.ipynb  3-Yolo-2-Egitim.ipynb  3.ipynb  6-RSNA.ipynb  6-RSNA_local.ipynb  RSNA-BASE-Fast.ipynb  (+19 more)
(+197 files in other folders)
